--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 env:
   DOCKER_IMAGE: ghcr.io/shoppingmallprj/ShoppingMall-BackEnd
   VERSION: ${{ github.sha }}
-  NAME: go_cicd
+  NAME: shoppingmall
 
 jobs:
   build:
