--- a/src/main/resources/application-email.yml
+++ b/src/main/resources/application-email.yml
@@ -1,14 +1,12 @@
 spring:
   mail:
-    host: smtp.gmail.com
-    port: 587
+    host: smtp.naver.com
+    port: 465
     protocol: smtp
-    username: "a01091522550@gmail.com"
-    password: "wjd@568099"
+    username: "sasa5680"
+    password: "wjdtjdruf69"
     properties:
-      mail:
-        smtp:
-          auth: true
-          starttls:
-            enable: true
+      mail.smtp.auth: true
+      mail.smtp.ssl.enable: true
+      mail.smtp.ssl.trust: smtp.naver.com
 
