--- a/src/main/resources/application-email.yml
+++ b/src/main/resources/application-email.yml
@@ -3,8 +3,8 @@ spring:
     host: smtp.naver.com
     port: 465
     protocol: smtp
-    username: "sasa5680@naver.com"
-    password: "wjdtjdruf69"
+    username: ""
+    password: ""
     properties:
       mail.smtp.auth: true
       mail.smtp.ssl.enable: true
