--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,15 @@ jobs:
     steps:
       - name: Check out source code
         uses: actions/checkout@v2
+
+      - name: Setup Secrete Keys (email, db, S3)
+        run: |
+          ls -al
+
       - name: Set up docker buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
+
       - name: Cache docker layers
         uses: actions/cache@v2
         with:
@@ -26,6 +32,8 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ env.VERSION }} # runner 설정에서 읽어들일거에요.
           restore-keys: |
             ${{ runner.os }}-buildx-
+
+
       - name: Login to ghcr
         uses: docker/login-action@v1
         with:
