--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Setup Secrete Keys (email, db, S3)
         run: |
-          ls -al
+          cat src/main/resources/application.yml
 
       - name: Set up docker buildx
         id: buildx
