--- a/src/main/resources/application-email.yml
+++ b/src/main/resources/application-email.yml
@@ -3,7 +3,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     protocol: smtp
-    username: ""
+    username: "a01091522550@gmail.com"
     password: ""
     properties:
       mail:
