--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,8 @@ jobs:
         uses: mikefarah/yq@master
         with:
           cmd: yq -i '.spring.mail.password = "${{secrets.GMAIL_SMTP_PASSWORD}}"' 'src/main/resources/application-email.yml'
+
+      - name: print keys
         run: |
           cat src/main/resources/application-email.yml
 
