--- a/src/main/resources/application-db.yml
+++ b/src/main/resources/application-db.yml
@@ -12,5 +12,5 @@ spring:
     url: jdbc:mariadb://13.125.219.49:3306/shopping
     driver-class-name: org.mariadb.jdbc.Driver
     username: 0000
-    password: qUS4fqFp3N9K
+    password: 0000
 
