--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         uses: mikefarah/yq@master
         with:
           cmd: |
-             MY_VAL="${{secrets.GMAIL_SMTP_PASSWORD}}" yq -i e '.spring.mail.password = strenv(MY_VAL)' 'src/main/resources/application-email.yml'
+             yq -i '.spring.mail.password = ${{secrets.GMAIL_SMTP_PASSWORD}}' 'src/main/resources/application-email.yml'
 #            yq -i '.spring.datasource.username = "${{secrets.DB_USER_NAME}}"' 'src/main/resources/application-db.yml'
 #            yq -i '.spring.datasource.password = "${{secrets.DB_PASSWORD}}"' 'src/main/resources/application-db.yml'
 #            yq -i '.cloud.aws.credentials.accessKey = "${{secrets.S3_ACCESSKEY}}"' 'src/main/resources/application-aws.yml'
@@ -31,6 +31,7 @@ jobs:
 
       - name: print keys
         run: |
+          cat src/main/resources/application-mail.yml
           cat src/main/resources/application-aws.yml
           cat src/main/resources/application-social.yml
 
