--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: see files
-        run: ls -al
+        run: ls ./build
 
       - name: Setup Secret Keys (email, db, S3)
         uses: mikefarah/yq@master
