--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
         run: ./gradlew clean build
 
       - name: see files
-        run: ls ./build
+        run: ls ./build/libs
 
       - name: Set up docker buildx
         id: buildx
