--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,22 +58,13 @@ jobs:
       - name: see files
         run: ls ./build/libs
 
-      - uses: actions/cache@v3
+      - name: Cache docker layers
+        uses: actions/cache@v2
         with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ env.VERSION }} # runner 설정에서 읽어들일거에요.
           restore-keys: |
-            ${{ runner.os }}-gradle-
-
-#      - name: Cache docker layers
-#        uses: actions/cache@v2
-#        with:
-#          path: /tmp/.buildx-cache
-#          key: ${{ runner.os }}-buildx-${{ env.VERSION }} # runner 설정에서 읽어들일거에요.
-#          restore-keys: |
-#            ${{ runner.os }}-buildx-
+            ${{ runner.os }}-buildx-
 
       - name: Login to ghcr
         uses: docker/login-action@v1
