--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,16 +47,11 @@ jobs:
         run: ./gradlew clean build
 
       - name: see files
-        run: ls ./build/libs
+        run: ls -al
 
       - name: Set up docker buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
-        with:
-          version: v0.7.0
-
-      - name: see files
-        run: ls ./build/libs
 
       - name: Cache docker layers
         uses: actions/cache@v2
@@ -77,6 +72,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: .
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ env.DOCKER_IMAGE }}:latest
