--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3.4'
 
 services:
-  redis:
-    image: redis
-    ports:
-      - 6379:6379
+#  redis:
+#    image: redis
+#    ports:
+#      - 6379:6379
   shoppingmall:
     image: shoppingmall
     build:
@@ -12,5 +12,5 @@ services:
       dockerfile: ./Dockerfile
     ports:
       - 8080:8080
-    depends_on:
-      - redis
+#    depends_on:
+#      - redis
