--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master ]
 
 env:
-  DOCKER_IMAGE: chery97/shoppingmallprj/shoppingmall-backend
+  DOCKER_IMAGE: ghcr.io/shoppingmallprj/shoppingmall-backend
   VERSION: ${{ github.sha }}
   NAME: shoppingmall
 
@@ -54,12 +54,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
-      - name: Login to DockerHub
+      - name: Login to ghcr
         uses: docker/login-action@v1
         with:
-          #registry: ghcr.io
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Build and push
         id: docker_build
@@ -75,12 +75,12 @@ jobs:
     name: Deploy
     runs-on: [ self-hosted, label-development ]
     steps:
-      - name: Login to DockerHub
+      - name: Login to ghcr
         uses: docker/login-action@v1
         with:
-          #registry: ghcr.io
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GHCR_TOKEN }}
       - name: Docker run
         run: |
           docker stop ${{ env.NAME }} && docker rm ${{ env.NAME }} && docker rmi ${{ env.DOCKER_IMAGE }}:latest
