--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ dependencies {
 	implementation 'com.giffing.bucket4j.spring.boot.starter:bucket4j-spring-boot-starter:0.4.0'
 
 	// cache
-	implementation 'org.springframework.boot:spring-boot-starter-cache'
+	//implementation 'org.springframework.boot:spring-boot-starter-cache'
 
 }
 
